--- a/DynamicTabs/Views/Home/Index.cshtml
+++ b/DynamicTabs/Views/Home/Index.cshtml
@@ -3,14 +3,14 @@
 }
 <link href="~/Content/PTCTabs.css" rel="stylesheet" />
 
-<div class="container row padding">
+<div class="container row " style="padding-top:5vh">
 
     <!--RWD condition ctrl-->
-    <div type="button" class="visible-xs visible-sm hidden-md hidden-lg  btn btn-default ptc-dismiss">隱藏篩選條件</div>
+    <div type="button" class="visible-xs visible-sm hidden-md hidden-lg  btn btn-default ptc-dismiss">hide</div>
     <!--end RWD condition ctrl -->
 
     <!--dynamic tabs-->
-    <div class="row ptc-conditions">
+    <div class="row ptc-conditions" >
         <!--clone block-->
         <div clsss="ptc-content-clone" hidden>
             <button type="button" class="ptc-cancel" data-toggle="tooltip btn btn-secondary" data-placement="bottom" title="移除分頁">x</button>
